--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Develop Branch</h2>
   <h3>Our branch, commrade</h3>
   <h3>Artem's Branch, Justin's Branch<h3>
+    <h3>Nate's Branch</h3>
 </body>
 </html>
